--- a/index.html
+++ b/index.html
@@ -87,7 +87,11 @@
 12,Sbrocca Junior,CISK FC,2,0,H
 12,FC Salisburo,Stiratoallagoccia,1,1,D
 12,HISTORIAS Y SABORES,Sbuchester United,1,4,A
-12,FC Ludopatykos,GIOIA E RIVOLUZIONE,4,2,H`;
+12,FC Ludopatykos,GIOIA E RIVOLUZIONE,4,2,H
+13,CISK FC,Stiratoallagoccia,2,3,A
+13,Sbrocca Junior,FC Ludopatykos,0,2,A
+13,Sbuchester United,FC Salisburo,2,1,H
+13,HISTORIAS Y SABORES,GIOIA E RIVOLUZIONE,2,2,D`;
         const defaultPointsCSV = `Date,HomeTeam,AwayTeam,HGoals,AGoals,Result
 1,Sbrocca Junior,Stiratoallagoccia,78.5,62.0,H
 1,CISK FC,FC Ludopatykos,65.0,71.5,A
@@ -136,7 +140,11 @@
 12,Sbrocca Junior,CISK FC,72.0,61.0,H
 12,FC Salisburo,Stiratoallagoccia,66.0,69.5,D
 12,HISTORIAS Y SABORES,Sbuchester United,68.0,79.5,A
-12,FC Ludopatykos,GIOIA E RIVOLUZIONE,78.5,73.0,H`;
+12,FC Ludopatykos,GIOIA E RIVOLUZIONE,78.5,73.0,H
+13,CISK FC,Stiratoallagoccia,71.0,75.0,A
+13,Sbrocca Junior,FC Ludopatykos,65.5,70.0,A
+13,Sbuchester United,FC Salisburo,70.0,66.0,H
+13,HISTORIAS Y SABORES,GIOIA E RIVOLUZIONE,71.5,72.5,D`;
 
         const calculateElo = (matches, kFactor = 32) => {
             const elo = {};
