--- a/index.html
+++ b/index.html
@@ -83,53 +83,70 @@
 11,Stiratoallagoccia,HISTORIAS Y SABORES,2,1,H
 11,GIOIA E RIVOLUZIONE,Sbrocca Junior,4,6,A
 11,Sbuchester United,CISK FC,1,2,A
-11,FC Salisburo,FC Ludopatykos,2,3,A`;
+11,FC Salisburo,FC Ludopatykos,2,3,A
+12,Sbrocca Junior,CISK FC,2,0,H
+12,FC Salisburo,Stiratoallagoccia,1,1,D
+12,HISTORIAS Y SABORES,Sbuchester United,1,4,A
+12,FC Ludopatykos,GIOIA E RIVOLUZIONE,4,2,H
+13,CISK FC,Stiratoallagoccia,2,3,A
+13,Sbrocca Junior,FC Ludopatykos,0,2,A
+13,Sbuchester United,FC Salisburo,2,1,H
+13,HISTORIAS Y SABORES,GIOIA E RIVOLUZIONE,2,2,D`;
 
         const defaultPointsCSV = `Date,HomeTeam,AwayTeam,HGoals,AGoals,Result
-1,Sbrocca Junior,Stiratoallagoccia,78.5,62.0,H
-1,CISK FC,FC Ludopatykos,65.0,71.5,A
-1,GIOIA E RIVOLUZIONE,HISTORIAS Y SABORES,58.0,74.5,A
-1,FC Salisburo,Sbuchester United,72.0,76.5,A
+1,Sbrocca Junior,Stiratoallagoccia,80.5,65.0,H
+1,CISK FC,FC Ludopatykos,65.5,68.0,A
+1,GIOIA E RIVOLUZIONE,HISTORIAS Y SABORES,64.0,72.0,A
+1,FC Salisburo,Sbuchester United,74.0,80.0,A
 2,Stiratoallagoccia,FC Salisburo,61.0,73.0,A
-2,Sbuchester United,GIOIA E RIVOLUZIONE,64.5,72.0,A
-2,HISTORIAS Y SABORES,CISK FC,82.5,68.0,H
-2,FC Ludopatykos,Sbrocca Junior,69.0,69.0,D
-3,CISK FC,Sbuchester United,77.5,71.0,H
-3,GIOIA E RIVOLUZIONE,Stiratoallagoccia,70.5,63.0,H
-3,FC Salisburo,Sbrocca Junior,79.0,58.5,H
-3,HISTORIAS Y SABORES,FC Ludopatykos,76.0,67.5,H
-4,Sbrocca Junior,GIOIA E RIVOLUZIONE,73.5,73.5,D
-4,Stiratoallagoccia,CISK FC,62.0,62.0,D
-4,Sbuchester United,HISTORIAS Y SABORES,66.5,78.0,A
-4,FC Ludopatykos,FC Salisburo,74.0,65.0,H
-5,CISK FC,Sbrocca Junior,71.0,63.5,H
-5,GIOIA E RIVOLUZIONE,FC Salisburo,60.0,75.5,A
-5,Sbuchester United,FC Ludopatykos,67.0,67.0,D
-5,HISTORIAS Y SABORES,Stiratoallagoccia,68.5,68.5,D
-6,Sbrocca Junior,HISTORIAS Y SABORES,72.5,64.0,H
-6,Stiratoallagoccia,Sbuchester United,59.0,70.0,A
-6,GIOIA E RIVOLUZIONE,FC Ludopatykos,71.5,62.0,H
-6,FC Salisburo,CISK FC,74.0,74.0,D
-7,CISK FC,GIOIA E RIVOLUZIONE,66.0,73.5,A
-7,Sbuchester United,Sbrocca Junior,68.0,81.0,A
-7,HISTORIAS Y SABORES,FC Salisburo,77.5,66.5,H
-7,FC Ludopatykos,Stiratoallagoccia,79.5,75.0,H
+2,Sbuchester United,GIOIA E RIVOLUZIONE,65.0,70.5,A
+2,HISTORIAS Y SABORES,CISK FC,87.0,70.5,H
+2,FC Ludopatykos,Sbrocca Junior,73.0,70.0,D
+3,CISK FC,Sbuchester United,79.0,75.0,H
+3,GIOIA E RIVOLUZIONE,Stiratoallagoccia,71.0,69.5,H
+3,FC Salisburo,Sbrocca Junior,78.5,64.5,H
+3,HISTORIAS Y SABORES,FC Ludopatykos,78.0,73.0,H
+4,Sbrocca Junior,GIOIA E RIVOLUZIONE,79.0,78.5,D
+4,Stiratoallagoccia,CISK FC,64.5,62.0,D
+4,Sbuchester United,HISTORIAS Y SABORES,72.5,78.5,A
+4,FC Ludopatykos,FC Salisburo,74.5,63.5,H
+5,CISK FC,Sbrocca Junior,72.5,65.5,H
+5,GIOIA E RIVOLUZIONE,FC Salisburo,63.0,71.5,A
+5,Sbuchester United,FC Ludopatykos,69.5,69.0,D
+5,HISTORIAS Y SABORES,Stiratoallagoccia,67.0,68.0,D
+6,Sbrocca Junior,HISTORIAS Y SABORES,70.5,63.0,H
+6,Stiratoallagoccia,Sbuchester United,60.5,69.5,A
+6,GIOIA E RIVOLUZIONE,FC Ludopatykos,72.5,61.5,H
+6,FC Salisburo,CISK FC,75.0,76.0,D
+7,CISK FC,GIOIA E RIVOLUZIONE,66.0,72.0,A
+7,Sbuchester United,Sbrocca Junior,72.5,84.0,A
+7,HISTORIAS Y SABORES,FC Salisburo,74.0,61.5,H
+7,FC Ludopatykos,Stiratoallagoccia,82.5,78.0,H
 8,Sbrocca Junior,FC Salisburo,64.5,84.0,A
-8,Stiratoallagoccia,FC Ludopatykos,69.0,63.5,H
-8,CISK FC,HISTORIAS Y SABORES,67.5,67.5,D
-8,GIOIA E RIVOLUZIONE,Sbuchester United,75.0,69.5,H
-9,Sbuchester United,Stiratoallagoccia,71.5,65.0,H
-9,FC Salisburo,GIOIA E RIVOLUZIONE,73.0,66.5,H
-9,HISTORIAS Y SABORES,Sbrocca Junior,68.0,68.0,D
-9,FC Ludopatykos,CISK FC,61.0,72.0,A
-10,CISK FC,FC Salisburo,83.5,67.0,H
-10,Sbrocca Junior,Sbuchester United,65.0,76.0,A
-10,Stiratoallagoccia,GIOIA E RIVOLUZIONE,64.0,77.5,A
-10,FC Ludopatykos,HISTORIAS Y SABORES,63.5,89.0,A
-11,Stiratoallagoccia,HISTORIAS Y SABORES,71.0,66.5,H
-11,GIOIA E RIVOLUZIONE,Sbrocca Junior,75.5,82.0,A
-11,Sbuchester United,CISK FC,66.0,74.5,A
-11,FC Salisburo,FC Ludopatykos,70.0,76.5,A`;
+8,Stiratoallagoccia,FC Ludopatykos,68.0,61.5,H
+8,CISK FC,HISTORIAS Y SABORES,66.0,66.0,D
+8,GIOIA E RIVOLUZIONE,Sbuchester United,76.0,73.0,H
+9,Sbuchester United,Stiratoallagoccia,70.0,68.0,H
+9,FC Salisburo,GIOIA E RIVOLUZIONE,70.0,67.5,H
+9,HISTORIAS Y SABORES,Sbrocca Junior,65.5,65.0,D
+9,FC Ludopatykos,CISK FC,61.5,69.0,A
+10,CISK FC,FC Salisburo,83.0,67.5,H
+10,Sbrocca Junior,Sbuchester United,69.0,75.0,A
+10,Stiratoallagoccia,GIOIA E RIVOLUZIONE,68.0,74.5,A
+10,FC Ludopatykos,HISTORIAS Y SABORES,68.5,96.0,A
+11,Stiratoallagoccia,HISTORIAS Y SABORES,73.0,66.5,H
+11,GIOIA E RIVOLUZIONE,Sbrocca Junior,79.5,86.0,A
+11,Sbuchester United,CISK FC,69.0,71.5,A
+11,FC Salisburo,FC Ludopatykos,70.5,75.5,A
+12,Sbrocca Junior,CISK FC,72.0,61.0,H
+12,FC Salisburo,Stiratoallagoccia,66.0,69.5,D
+12,HISTORIAS Y SABORES,Sbuchester United,68.0,79.5,A
+12,FC Ludopatykos,GIOIA E RIVOLUZIONE,78.5,73.0,H
+13,CISK FC,Stiratoallagoccia,71.0,75.0,A
+13,Sbrocca Junior,FC Ludopatykos,65.5,70.0,A
+13,Sbuchester United,FC Salisburo,70.0,66.0,H
+13,HISTORIAS Y SABORES,GIOIA E RIVOLUZIONE,71.5,72.5,D`;
+
 
         const calculateElo = (matches, kFactor = 32) => {
             const elo = {};
@@ -2169,10 +2186,10 @@
                             const coachData = [
                                 { name: 'LEO', wins: 29, draws: 5, losses: 21 },
                                 { name: 'GIANMARCO', wins: 24, draws: 9, losses: 23 },
-                                { name: 'MATTEO P', wins: 26, draws: 9, losses: 20 },
+                                { name: 'AMATTE', wins: 26, draws: 9, losses: 20 },
                                 { name: 'CATELLO', wins: 15, draws: 18, losses: 19 },
                                 { name: 'LOLLO', wins: 18, draws: 9, losses: 29 },
-                                { name: 'MATTEO DM', wins: 24, draws: 10, losses: 19 },
+                                { name: 'MATTEO NEGRO', wins: 24, draws: 10, losses: 19 },
                                 { name: 'ELIA', wins: 5, draws: 3, losses: 5 },
                                 { name: 'MARCO', wins: 3, draws: 3, losses: 7 },
                             ].map(coach => ({
