--- a/index.html
+++ b/index.html
@@ -91,8 +91,11 @@
 13,CISK FC,Stiratoallagoccia,2,3,A
 13,Sbrocca Junior,FC Ludopatykos,0,2,A
 13,Sbuchester United,FC Salisburo,2,1,H
-13,HISTORIAS Y SABORES,GIOIA E RIVOLUZIONE,2,2,D`;
-
+13,HISTORIAS Y SABORES,GIOIA E RIVOLUZIONE,2,2,D
+14,Sbuchester United,CISK FC,5,3,H
+14,FC Salisburo,GIOIA E RIVOLUZIONE,1,1,D
+14,HISTORIAS Y SABORES,Sbrocca Junior,5,2,H
+14,FC Ludopatykos,Stiratoallagoccia,5,2,H`;
         const defaultPointsCSV = `Date,HomeTeam,AwayTeam,HGoals,AGoals,Result
 1,Sbrocca Junior,Stiratoallagoccia,80.5,65.0,H
 1,CISK FC,FC Ludopatykos,65.5,68.0,A
@@ -145,8 +148,11 @@
 13,CISK FC,Stiratoallagoccia,71.0,75.0,A
 13,Sbrocca Junior,FC Ludopatykos,65.5,70.0,A
 13,Sbuchester United,FC Salisburo,70.0,66.0,H
-13,HISTORIAS Y SABORES,GIOIA E RIVOLUZIONE,71.5,72.5,D`;
-
+13,HISTORIAS Y SABORES,GIOIA E RIVOLUZIONE,71.5,72.5,D
+14,Sbuchester United,CISK FC,83.0,76.0,H
+14,FC Salisburo,GIOIA E RIVOLUZIONE,66.0,67.5,D
+14,HISTORIAS Y SABORES,Sbrocca Junior,83.0,73.5,H
+14,FC Ludopatykos,Stiratoallagoccia,84.5,70.5,H`;
 
         const calculateElo = (matches, kFactor = 32) => {
             const elo = {};
