--- a/index.html
+++ b/index.html
@@ -100,7 +100,11 @@
 15,CISK FC,FC Ludopatykos,2,0,H
 15,GIOIA E RIVOLUZIONE,Sbuchester United,2,1,H
 15,Stiratoallagoccia,HISTORIAS Y SABORES,2,2,D
-15,Sbrocca Junior,FC Salisburo,1,0,H`;
+15,Sbrocca Junior,FC Salisburo,1,0,H
+16,HISTORIAS Y SABORES,CISK FC,2,3,A
+16,FC Ludopatykos,GIOIA E RIVOLUZIONE,3,5,A
+16,Sbuchester United,FC Salisburo,2,4,A
+16,Stiratoallagoccia,Sbrocca Junior,3,1,H`;
         const defaultPointsCSV = `Date,HomeTeam,AwayTeam,HGoals,AGoals,Result
 1,Sbrocca Junior,Stiratoallagoccia,80.5,65.0,H
 1,CISK FC,FC Ludopatykos,65.5,68.0,A
@@ -161,7 +165,11 @@
 15,CISK FC,FC Ludopatykos,70.0,65.5,H
 15,GIOIA E RIVOLUZIONE,Sbuchester United,73.0,68.5,H
 15,Stiratoallagoccia,HISTORIAS Y SABORES,73.0,71.5,D
-15,Sbrocca Junior,FC Salisburo,68.5,63.5,H`;
+15,Sbrocca Junior,FC Salisburo,68.5,63.5,H
+16,HISTORIAS Y SABORES,CISK FC,70.0,75.5,A
+16,FC Ludopatykos,GIOIA E RIVOLUZIONE,75.0,84.5,A
+16,Sbuchester United,FC Salisburo,70.5,78.5,A
+16,Stiratoallagoccia,Sbrocca Junior,76.5,67.0,H`;
         const calculateElo = (matches, kFactor = 32) => {
             const elo = {};
             const teams = [...new Set(matches.flatMap(m => [m.HomeTeam, m.AwayTeam]))];
@@ -2934,14 +2942,14 @@
                         {activeTab === 'coachstats' && (() => {
                             // Coach data from the image
                             const coachData = [
-                                { name: 'LEO', wins: 30, draws: 5, losses: 22 },
-                                { name: 'GIANMARCO', wins: 25, draws: 9, losses: 24 },
-                                { name: 'AMATTE', wins: 27, draws: 9, losses: 21 },
-                                { name: 'CATELLO', wins: 16, draws: 19, losses: 19 },
-                                { name: 'LOLLO', wins: 18, draws: 10, losses: 30 },
-                                { name: 'MATTEO NEGRO', wins: 25, draws: 11, losses: 19 },
-                                { name: 'ELIA', wins: 6, draws: 3, losses: 6 },
-                                { name: 'MARCO', wins: 3, draws: 4, losses: 8 },
+                                { name: 'LEO', wins: 31, draws: 5, losses: 22 },
+                                { name: 'GIANMARCO', wins: 25, draws: 9, losses: 25 },
+                                { name: 'AMATTE', wins: 27, draws: 9, losses: 22 },
+                                { name: 'CATELLO', wins: 17, draws: 19, losses: 19 },
+                                { name: 'LOLLO', wins: 19, draws: 10, losses: 30 },
+                                { name: 'MATTEO NEGRO', wins: 25, draws: 11, losses: 20 },
+                                { name: 'ELIA', wins: 6, draws: 3, losses: 7 },
+                                { name: 'MARCO', wins: 4, draws: 4, losses: 8 },
                             ].map(coach => ({
                                 ...coach,
                                 total: coach.wins + coach.draws + coach.losses,
