--- a/index.html
+++ b/index.html
@@ -93,22 +93,26 @@
 13,Sbrocca Junior,FC Ludopatykos,0,2,A
 13,Sbuchester United,FC Salisburo,2,1,H
 13,HISTORIAS Y SABORES,GIOIA E RIVOLUZIONE,2,2,D
-14,Sbuchester United,CISK FC,5,3,H
-14,FC Salisburo,GIOIA E RIVOLUZIONE,1,1,D
-14,HISTORIAS Y SABORES,Sbrocca Junior,5,2,H
-14,FC Ludopatykos,Stiratoallagoccia,5,2,H
-15,CISK FC,FC Ludopatykos,2,0,H
-15,GIOIA E RIVOLUZIONE,Sbuchester United,2,1,H
-15,Stiratoallagoccia,HISTORIAS Y SABORES,2,2,D
-15,Sbrocca Junior,FC Salisburo,1,0,H
-16,HISTORIAS Y SABORES,CISK FC,2,3,A
-16,FC Ludopatykos,GIOIA E RIVOLUZIONE,3,5,A
-16,Sbuchester United,FC Salisburo,2,4,A
-16,Stiratoallagoccia,Sbrocca Junior,3,1,H
-17,CISK FC,Stiratoallagoccia,4,3,H
-17,FC Salisburo,FC Ludopatykos,3,1,H
-17,GIOIA E RIVOLUZIONE,HISTORIAS Y SABORES,5,2,H
-17,Sbrocca Junior,Sbuchester United,2,3,A`;
+14,GIOIA E RIVOLUZIONE,CISK FC,1,2,A
+14,Stiratoallagoccia,Sbrocca Junior,0,3,A
+14,FC Salisburo,HISTORIAS Y SABORES,3,0,H
+14,FC Ludopatykos,Sbuchester United,2,2,D
+15,Sbuchester United,CISK FC,5,3,H
+15,FC Salisburo,GIOIA E RIVOLUZIONE,1,1,D
+15,HISTORIAS Y SABORES,Sbrocca Junior,5,2,H
+15,FC Ludopatykos,Stiratoallagoccia,5,2,H
+16,CISK FC,FC Ludopatykos,2,0,H
+16,GIOIA E RIVOLUZIONE,Sbuchester United,2,1,H
+16,Stiratoallagoccia,HISTORIAS Y SABORES,2,2,D
+16,Sbrocca Junior,FC Salisburo,1,0,H
+17,HISTORIAS Y SABORES,CISK FC,2,3,A
+17,FC Ludopatykos,GIOIA E RIVOLUZIONE,3,5,A
+17,Sbuchester United,FC Salisburo,2,4,A
+17,Stiratoallagoccia,Sbrocca Junior,3,1,H
+18,CISK FC,Stiratoallagoccia,4,3,H
+18,FC Salisburo,FC Ludopatykos,3,1,H
+18,GIOIA E RIVOLUZIONE,HISTORIAS Y SABORES,5,2,H
+18,Sbrocca Junior,Sbuchester United,2,3,A`;
         const defaultPointsCSV = `Date,HomeTeam,AwayTeam,HGoals,AGoals,Result
 1,Sbrocca Junior,Stiratoallagoccia,80.5,65.0,H
 1,CISK FC,FC Ludopatykos,65.5,68.0,A
@@ -162,22 +166,26 @@
 13,Sbrocca Junior,FC Ludopatykos,65.5,70.0,A
 13,Sbuchester United,FC Salisburo,70.0,66.0,H
 13,HISTORIAS Y SABORES,GIOIA E RIVOLUZIONE,71.5,72.5,D
-14,Sbuchester United,CISK FC,83.0,76.0,H
-14,FC Salisburo,GIOIA E RIVOLUZIONE,66.0,67.5,D
-14,HISTORIAS Y SABORES,Sbrocca Junior,83.0,73.5,H
-14,FC Ludopatykos,Stiratoallagoccia,84.5,70.5,H
-15,CISK FC,FC Ludopatykos,70.0,65.5,H
-15,GIOIA E RIVOLUZIONE,Sbuchester United,73.0,68.5,H
-15,Stiratoallagoccia,HISTORIAS Y SABORES,73.0,71.5,D
-15,Sbrocca Junior,FC Salisburo,68.5,63.5,H
-16,HISTORIAS Y SABORES,CISK FC,70.0,75.5,A
-16,FC Ludopatykos,GIOIA E RIVOLUZIONE,75.0,84.5,A
-16,Sbuchester United,FC Salisburo,70.5,78.5,A
-16,Stiratoallagoccia,Sbrocca Junior,76.5,67.0,H
-17,CISK FC,Stiratoallagoccia,78.0,77.5,H
-17,FC Salisburo,FC Ludopatykos,76.5,69.5,H
-17,GIOIA E RIVOLUZIONE,HISTORIAS Y SABORES,83.0,72.0,H
-17,Sbrocca Junior,Sbuchester United,72.0,75.5,A`;
+14,GIOIA E RIVOLUZIONE,CISK FC,66.5,70.0,A
+14,Stiratoallagoccia,Sbrocca Junior,64.0,76.0,A
+14,FC Salisburo,HISTORIAS Y SABORES,77.5,60.0,H
+14,FC Ludopatykos,Sbuchester United,72.5,71.5,D
+15,Sbuchester United,CISK FC,83.0,76.0,H
+15,FC Salisburo,GIOIA E RIVOLUZIONE,66.0,67.5,D
+15,HISTORIAS Y SABORES,Sbrocca Junior,83.0,73.5,H
+15,FC Ludopatykos,Stiratoallagoccia,84.5,70.5,H
+16,CISK FC,FC Ludopatykos,70.0,65.5,H
+16,GIOIA E RIVOLUZIONE,Sbuchester United,73.0,68.5,H
+16,Stiratoallagoccia,HISTORIAS Y SABORES,73.0,71.5,D
+16,Sbrocca Junior,FC Salisburo,68.5,63.5,H
+17,HISTORIAS Y SABORES,CISK FC,70.0,75.5,A
+17,FC Ludopatykos,GIOIA E RIVOLUZIONE,75.0,84.5,A
+17,Sbuchester United,FC Salisburo,70.5,78.5,A
+17,Stiratoallagoccia,Sbrocca Junior,76.5,67.0,H
+18,CISK FC,Stiratoallagoccia,78.0,77.5,H
+18,FC Salisburo,FC Ludopatykos,76.5,69.5,H
+18,GIOIA E RIVOLUZIONE,HISTORIAS Y SABORES,83.0,72.0,H
+18,Sbrocca Junior,Sbuchester United,72.0,75.5,A`;
         const calculateElo = (matches, kFactor = 32) => {
             const elo = {};
             const teams = [...new Set(matches.flatMap(m => [m.HomeTeam, m.AwayTeam]))];
@@ -2438,14 +2446,14 @@
                         {activeTab === 'coachstats' && (() => {
                             // Coach data from the image
                             const coachData = [
-                                { name: 'LEO', wins: 32, draws: 5, losses: 22 },
-                                { name: 'GIANMARCO', wins: 25, draws: 9, losses: 26 },
-                                { name: 'AMATTE', wins: 28, draws: 9, losses: 22 },
-                                { name: 'CATELLO', wins: 18, draws: 19, losses: 19 },
-                                { name: 'LOLLO', wins: 20, draws: 10, losses: 30 },
-                                { name: 'MATTEO NEGRO', wins: 25, draws: 11, losses: 21 },
-                                { name: 'ELIA', wins: 6, draws: 3, losses: 8 },
-                                { name: 'MARCO', wins: 4, draws: 4, losses: 9 },
+                                { name: 'LEO', wins: 33, draws: 5, losses: 22 },
+                                { name: 'GIANMARCO', wins: 25, draws: 10, losses: 26 },
+                                { name: 'AMATTE', wins: 28, draws: 10, losses: 22 },
+                                { name: 'CATELLO', wins: 18, draws: 19, losses: 20 },
+                                { name: 'LOLLO', wins: 21, draws: 10, losses: 30 },
+                                { name: 'MATTEO NEGRO', wins: 25, draws: 11, losses: 22 },
+                                { name: 'ELIA', wins: 7, draws: 3, losses: 8 },
+                                { name: 'MARCO', wins: 4, draws: 4, losses: 10 },
                             ].map(coach => ({
                                 ...coach,
                                 total: coach.wins + coach.draws + coach.losses,
