--- a/index.html
+++ b/index.html
@@ -112,7 +112,11 @@
 18,CISK FC,Stiratoallagoccia,4,3,H
 18,FC Salisburo,FC Ludopatykos,3,1,H
 18,GIOIA E RIVOLUZIONE,HISTORIAS Y SABORES,5,2,H
-18,Sbrocca Junior,Sbuchester United,2,3,A`;
+18,Sbrocca Junior,Sbuchester United,2,3,A
+19,CISK FC,Sbrocca Junior,2,2,D
+19,HISTORIAS Y SABORES,FC Salisburo,5,1,H
+19,FC Ludopatykos,Sbuchester United,2,0,H
+19,Stiratoallagoccia,GIOIA E RIVOLUZIONE,0,2,A`;
         const defaultPointsCSV = `Date,HomeTeam,AwayTeam,HGoals,AGoals,Result
 1,Sbrocca Junior,Stiratoallagoccia,80.5,65.0,H
 1,CISK FC,FC Ludopatykos,65.5,68.0,A
@@ -185,7 +189,11 @@
 18,CISK FC,Stiratoallagoccia,78.0,77.5,H
 18,FC Salisburo,FC Ludopatykos,76.5,69.5,H
 18,GIOIA E RIVOLUZIONE,HISTORIAS Y SABORES,83.0,72.0,H
-18,Sbrocca Junior,Sbuchester United,72.0,75.5,A`;
+18,Sbrocca Junior,Sbuchester United,72.0,75.5,A
+19,CISK FC,Sbrocca Junior,71.5,73.5,D
+19,HISTORIAS Y SABORES,FC Salisburo,82.5,68.5,H
+19,FC Ludopatykos,Sbuchester United,72.0,62.0,H
+19,Stiratoallagoccia,GIOIA E RIVOLUZIONE,58.5,72.5,A`;
         const calculateElo = (matches, kFactor = 32) => {
             const elo = {};
             const teams = [...new Set(matches.flatMap(m => [m.HomeTeam, m.AwayTeam]))];
@@ -2446,14 +2454,14 @@
                         {activeTab === 'coachstats' && (() => {
                             // Coach data from the image
                             const coachData = [
-                                { name: 'LEO', wins: 33, draws: 5, losses: 22 },
-                                { name: 'GIANMARCO', wins: 25, draws: 10, losses: 26 },
-                                { name: 'AMATTE', wins: 28, draws: 10, losses: 22 },
-                                { name: 'CATELLO', wins: 18, draws: 19, losses: 20 },
-                                { name: 'LOLLO', wins: 21, draws: 10, losses: 30 },
-                                { name: 'MATTEO NEGRO', wins: 25, draws: 11, losses: 22 },
-                                { name: 'ELIA', wins: 7, draws: 3, losses: 8 },
-                                { name: 'MARCO', wins: 4, draws: 4, losses: 10 },
+                                { name: 'LEO', wins: 33, draws: 6, losses: 22 },
+                                { name: 'GIANMARCO', wins: 26, draws: 10, losses: 26 },
+                                { name: 'AMATTE', wins: 28, draws: 10, losses: 23 },
+                                { name: 'CATELLO', wins: 19, draws: 19, losses: 20 },
+                                { name: 'LOLLO', wins: 21, draws: 10, losses: 31 },
+                                { name: 'MATTEO NEGRO', wins: 26, draws: 11, losses: 22 },
+                                { name: 'ELIA', wins: 7, draws: 4, losses: 8 },
+                                { name: 'MARCO', wins: 4, draws: 4, losses: 11 },
                             ].map(coach => ({
                                 ...coach,
                                 total: coach.wins + coach.draws + coach.losses,
