--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 19,FC Ludopatykos,Sbuchester United,2,0,H
 19,Stiratoallagoccia,GIOIA E RIVOLUZIONE,0,2,A
 20,GIOIA E RIVOLUZIONE,CISK FC,5,6,A
-20,FC Salisburo,Sitratoallagoccia,2,4,A
+20,FC Salisburo,Stiratoallagoccia,2,4,A
 20,FC Ludopatykos,Sbrocca Junior,2,1,H
 20,Sbuchester United,HISTORIAS Y SABORES,1,4,A`;
         const defaultPointsCSV = `Date,HomeTeam,AwayTeam,HGoals,AGoals,Result
@@ -199,7 +199,7 @@
 19,FC Ludopatykos,Sbuchester United,72.0,62.0,H
 19,Stiratoallagoccia,GIOIA E RIVOLUZIONE,58.5,72.5,A
 20,GIOIA E RIVOLUZIONE,CISK FC,84.0,87.5,A
-20,FC Salisburo,Sitratoallagoccia,73.0,78.0,A
+20,FC Salisburo,Stiratoallagoccia,73.0,78.0,A
 20,FC Ludopatykos,Sbrocca Junior,72.0,67.0,H
 20,Sbuchester United,HISTORIAS Y SABORES,67.5,78.5,A`;
         const calculateElo = (matches, kFactor = 32) => {
