--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 22,GIOIA E RIVOLUZIONE,Sbrocca Junior,6,4,H
 22,HISTORIAS Y SABORES,Stiratoallagoccia,3,5,A
 23,CISK FC,GIOIA E RIVOLUZIONE,4,2,H
-23,Sbuchester United,FC Ludopatykos,1,1,A
+23,Sbuchester United,FC Ludopatykos,1,1,D
 23,Stiratoallagoccia,FC Salisburo,5,3,H
 23,Sbrocca Junior,HISTORIAS Y SABORES,0,2,A`;
         const defaultPointsCSV = `Date,HomeTeam,AwayTeam,HGoals,AGoals,Result
@@ -223,7 +223,7 @@
 22,GIOIA E RIVOLUZIONE,Sbrocca Junior,87.0,79.5,H
 22,HISTORIAS Y SABORES,Stiratoallagoccia,77.5,84.0,A
 23,CISK FC,GIOIA E RIVOLUZIONE,79.5,70.5,H
-23,Sbuchester United,FC Ludopatykos,66.0,68.5,A
+23,Sbuchester United,FC Ludopatykos,66.0,68.5,D
 23,Stiratoallagoccia,FC Salisburo,83.0,74.5,H
 23,Sbrocca Junior,HISTORIAS Y SABORES,59.5,70.5,A`;
         const calculateElo = (matches, kFactor = 32) => {
